Added basic rewards screen.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "Critera",
     "cullface",
     "curseforge",
+    "dailyrewards",
     "DISPLAYTEST",
     "eventbus",
     "firstperson",
@@ -27,6 +28,7 @@
     "gradlew",
     "grandle",
     "Gson",
+    "Hotbar",
     "IGNORESERVERONLY",
     "Ingame",
     "javafmlmod",
