Finalized first beta version. Added seperated screens for length of the days. Added client side data handling. Added Network handler to synching data from server->client. Removed unneeded files.

--- a/build.gradle
+++ b/build.gradle
@@ -185,8 +185,8 @@ curseforge {
   apiKey = "${credentials.curseforge_api_token}"
   project {
     id = "${curseforge_project_id}"
-    changelog = '[[ --Change Log-- ]]'
-    releaseType = 'release'
+    changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
+    releaseType = 'beta'
     addGameVersion("1.18.2")
     addGameVersion("Forge")
   }
