Added visual effects for the different kind of items slots like rewards preview, already taken reward and reward ready to claim. Fixed smaller issues and removed some no longer needed files.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "autosave",
     "Behaviour",
     "blastfurnace",
+    "blit",
     "Blockbench",
     "bordihn",
     "bufferbuilder",
@@ -43,6 +44,7 @@
     "NETHERIRE",
     "nonnulllist",
     "overworld",
+    "Reposts",
     "righthand",
     "Serializers",
     "server",
