--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ minecraft {
   // stable_#            Stables are built at the discretion of the MCP team.
   // Use non-default mappings at your own risk. they may not always work.
   // Simply re-run your setup task after changing the mappings to update your workspace.
-  mappings channel: 'official', version: '1.18.2'
+  mappings channel: 'official', version: '1.19'
   // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
   // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -126,25 +126,11 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.18.2-40.1.51'
+  minecraft 'net.minecraftforge:forge:1.19-41.0.38'
 
-  // You may put jars on which you depend on in ./libs or you may define them like so..
-  // compile "some.group:artifact:version:classifier"
-  // compile "some.group:artifact:version"
-
-  // Real examples
-  // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-  // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-  // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-  // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-  // These dependencies get remapped to your current MCP mappings
-  // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-  // For more info...
-  // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-  // http://www.gradle.org/docs/current/userguide/dependency_management.html
+  // Additional helpful Mods for development (dev depenedency)
+  runtimeOnly fg.deobf("curse.maven:jei-238222:3835406")
+  runtimeOnly fg.deobf("curse.maven:jade-324717:3824831")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -187,7 +173,7 @@ curseforge {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
     releaseType = 'beta'
-    addGameVersion("1.18.2")
+    addGameVersion("1.19")
     addGameVersion("Forge")
   }
 }
