--- a/build.gradle
+++ b/build.gradle
@@ -126,7 +126,7 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.19-41.0.110'
+  minecraft 'net.minecraftforge:forge:1.19-41.1.0'
 
   // Additional helpful Mods for development (dev depenedency)
   // runtimeOnly fg.deobf("curse.maven:jei-238222:3835406")
@@ -172,7 +172,7 @@ curseforge {
   project {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
-    releaseType = 'beta'
+    releaseType = 'release'
     addGameVersion("1.19")
     addGameVersion("Forge")
   }
