--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,11 @@ buildscript {
 
 plugins {
   id 'com.matthewprenger.cursegradle' version '1.4.0'
+  id 'eclipse'
+  id 'maven-publish'
+  id 'net.minecraftforge.gradle' version '5.1.+'
   id 'nu.studer.credentials' version '1.0.7'
 }
-
-apply plugin: 'net.minecraftforge.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
-compileJava {options.encoding = "UTF-8"}
 
 version = "${version_major}.${version_minor}.${version_patch}"
 archivesBaseName = "${mod_id}_${mc_version}"
@@ -32,7 +29,7 @@ minecraft {
   // stable_#            Stables are built at the discretion of the MCP team.
   // Use non-default mappings at your own risk. they may not always work.
   // Simply re-run your setup task after changing the mappings to update your workspace.
-  mappings channel: 'official', version: '1.19'
+  mappings channel: 'official', version: '1.19.1'
   // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
   // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -126,7 +123,7 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.19-41.1.0'
+  minecraft 'net.minecraftforge:forge:1.19.1-42.0.1'
 
   // Additional helpful Mods for development (dev depenedency)
   // runtimeOnly fg.deobf("curse.maven:jei-238222:3835406")
@@ -173,7 +170,11 @@ curseforge {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
     releaseType = 'release'
-    addGameVersion("1.19")
+    addGameVersion("1.19.1")
     addGameVersion("Forge")
   }
+}
+
+tasks.withType(JavaCompile).configureEach {
+  options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
