--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ compileJava {options.encoding = "UTF-8"}
 version = "${version_major}.${version_minor}.${version_patch}"
 archivesBaseName = "${mod_id}_${mc_version}"
 
-// Mojang ships Java 17 to end users in 1.18+.
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+// Mojang ships Java 8 to end users in 1.16.5+, so your mod should target Java 8.
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
