Added config option for changes and separate loot bag entry. Added preview command to check config entries.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,8 @@
     "javafmlmod",
     "Knockback",
     "lefthand",
+    "lootbag",
+    "lootbagmod",
     "markus",
     "markusbordihn",
     "minecraft",
