--- a/build.gradle
+++ b/build.gradle
@@ -126,8 +126,10 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.18.2-40.1.68'
+  minecraft 'net.minecraftforge:forge:1.18.2-40.1.73'
 
+  // Compability Tests
+  runtimeOnly fg.deobf("curse.maven:loot-bag-mod-356236:3699372")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
