Fixed missing texture issue. Added fix for Quark issue inside the documentation. Fixed smaller issues, before marking the 1.16.5 version as deprecated.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,15 @@
   "java.format.settings.profile": "GoogleStyle",
   "java.dependency.showMembers": true,
   "java.dependency.packagePresentation": "flat",
-  "editor.detectIndentation": false
+  "editor.detectIndentation": false,
+  "java.compile.nullAnalysis.nullable": [
+    "org.springframework.lang.Nullable",
+    "javax.annotation.Nullable",
+    "org.eclipse.jdt.annotation.Nullable"
+  ],
+  "java.compile.nullAnalysis.nonnull": [
+    "org.springframework.lang.NonNull",
+    "javax.annotation.Nonnull",
+    "org.eclipse.jdt.annotation.NonNull"
+  ]
 }
