--- a/build.gradle
+++ b/build.gradle
@@ -127,7 +127,11 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.19.2-43.1.27'
+  minecraft 'net.minecraftforge:forge:1.19.2-43.1.52'
+
+  // Integration: Inventory Next
+  compileOnly fg.deobf("curse.maven:libipn-679177:4076494")
+  compileOnly fg.deobf("curse.maven:inventory-profiles-next-495267:4082935")
 
   // Additional helpful Mods for development (dev depenedency)
   // runtimeOnly fg.deobf("curse.maven:jei-238222:3835406")
