Added next time for claimable reward to the RewardScreen UI. This will also help to isolate issues like #9 more in detail.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
   "java.dependency.showMembers": true,
   "java.dependency.packagePresentation": "flat",
   "editor.detectIndentation": false,
+  "java.compile.nullAnalysis.mode": "automatic",
   "java.compile.nullAnalysis.nullable": [
     "org.springframework.lang.Nullable",
     "javax.annotation.Nullable",
@@ -82,5 +83,5 @@
     "org.springframework.lang.NonNull",
     "javax.annotation.Nonnull",
     "org.eclipse.jdt.annotation.NonNull"
-  ]
+  ],
 }
