--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ minecraft {
   // stable_#            Stables are built at the discretion of the MCP team.
   // Use non-default mappings at your own risk. they may not always work.
   // Simply re-run your setup task after changing the mappings to update your workspace.
-  mappings channel: 'official', version: '1.19.2'
+  mappings channel: 'official', version: '1.19.3'
   // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
   // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -127,7 +127,7 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.19.2-43.2.0'
+  minecraft 'net.minecraftforge:forge:1.19.3-44.0.5'
 
   // Additional helpful Mods for development (dev depenedency)
   // runtimeOnly fg.deobf("curse.maven:jei-238222:3835406")
@@ -176,8 +176,8 @@ curseforge {
   project {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
-    releaseType = 'release'
-    addGameVersion("1.19.2")
+    releaseType = 'beta'
+    addGameVersion("1.19.3")
     addGameVersion("Forge")
   }
 }
