Updated beta to release candidate.

--- a/build.gradle
+++ b/build.gradle
@@ -127,7 +127,7 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.19.3-44.1.20'
+  minecraft 'net.minecraftforge:forge:1.19.3-44.1.21'
 
   // Additional helpful Mods for development (dev depenedency)
   // runtimeOnly fg.deobf("curse.maven:jei-238222:3835406")
@@ -176,7 +176,7 @@ curseforge {
   project {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
-    releaseType = 'beta'
+    releaseType = 'release'
     addGameVersion("1.19.3")
     addGameVersion("Forge")
   }
