--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,13 @@
-buildscript {
-  repositories {
-    maven { url = 'https://maven.minecraftforge.net' }
-    mavenCentral()
-  }
-  dependencies {
-    classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-  }
-}
-
 plugins {
   id 'com.matthewprenger.cursegradle' version '1.4.0'
   id 'eclipse'
   id 'maven-publish'
-  id 'net.minecraftforge.gradle' version '5.1.+'
+  id 'net.minecraftforge.gradle' version '[6.0,6.2)'
   id 'nu.studer.credentials' version '1.0.7'
 }
 
 version = "${version_major}.${version_minor}.${version_patch}"
-archivesBaseName = "${mod_id}_${mc_version}"
+archivesBaseName = "${mod_id}_${minecraft_version}"
 
 // Mojang ships Java 17 to end users in 1.18+.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -29,7 +19,13 @@ minecraft {
   // stable_#            Stables are built at the discretion of the MCP team.
   // Use non-default mappings at your own risk. they may not always work.
   // Simply re-run your setup task after changing the mappings to update your workspace.
-  mappings channel: 'official', version: '1.19.4'
+  mappings channel: mapping_channel, version: mapping_version
+
+  // This property allows configuring Gradle's ProcessResources task(s) to run on IDE output locations before launching the game.
+  // It is REQUIRED to be set to true for this template to function.
+  // See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
+  copyIdeResources = true
+
   // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
   // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -50,8 +46,11 @@ minecraft {
       // Recommended logging level for the console
       property 'forge.logging.console.level', 'debug'
 
+      // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+      property 'forge.enabledGameTestNamespaces', mod_id
+
       mods {
-        daily_rewards {
+        "${mod_id}" {
             source sourceSets.main
         }
       }
@@ -74,8 +73,37 @@ minecraft {
       // Recommended logging level for the console
       property 'forge.logging.console.level', 'debug'
 
+      // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+      property 'forge.enabledGameTestNamespaces', mod_id
+
       mods {
-        daily_rewards {
+        "${mod_id}" {
+            source sourceSets.main
+        }
+      }
+    }
+
+    // This run config launches GameTestServer and runs all registered gametests, then exits.
+    // By default, the server will crash when no gametests are provided.
+    // The gametest system is also enabled by default for other run configs under the /test command.
+    gameTestServer {
+      workingDirectory project.file('run')
+
+      // Recommended logging data for a userdev environment
+      // The markers can be changed as needed.
+      // "SCAN": For mods scan.
+      // "REGISTRIES": For firing of registry events.
+      // "REGISTRYDUMP": For getting the contents of all registries.
+      property 'forge.logging.markers', 'REGISTRIES'
+
+      // Recommended logging level for the console
+      property 'forge.logging.console.level', 'debug'
+
+      // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+      property 'forge.enabledGameTestNamespaces', mod_id
+
+      mods {
+        "${mod_id}" {
             source sourceSets.main
         }
       }
@@ -95,10 +123,10 @@ minecraft {
       property 'forge.logging.console.level', 'debug'
 
       // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-      args '--mod', 'daily_rewards', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+      args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
       mods {
-        daily_rewards {
+        "${mod_id}" {
             source sourceSets.main
         }
       }
@@ -127,7 +155,7 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.19.4-45.0.25'
+  minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
   // Additional helpful Mods for development (dev depenedency)
   // runtimeOnly fg.deobf("curse.maven:jei-238222:3835406")
@@ -135,6 +163,27 @@ dependencies {
 
   // Compability Tests
   // runtimeOnly fg.deobf("curse.maven:loot-bag-mod-356236:3699372")
+}
+
+// This block of code expands all declared replace properties in the specified resource targets.
+// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
+// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
+// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
+def resourceTargets = ['META-INF/mods.toml', 'pack.mcmeta']
+def replaceProperties = [
+    minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
+    forge_version: forge_version, forge_version_range: forge_version_range,
+    loader_version_range: loader_version_range,
+    mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: version,
+    mod_authors: mod_authors, mod_description: mod_description,
+]
+processResources {
+  inputs.properties replaceProperties
+  replaceProperties.put 'project', project
+
+  filesMatching(resourceTargets) {
+    expand replaceProperties
+  }
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -176,8 +225,8 @@ curseforge {
   project {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
-    releaseType = 'release'
-    addGameVersion("1.19.4")
+    releaseType = "${curseforge_release_type}"
+    addGameVersion("${minecraft_version}")
     addGameVersion("Forge")
   }
 }
