--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,32 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
-group=de.markusbordihn.dailyrewards
-
+## Mod Properties
 mod_id=daily_rewards
 mod_name=Daily Rewards
-mod_author=Markus Bordihn
-vendor_name=markusbordihn
+mod_authors=Markus Bordihn
+mod_license=MIT
+mod_group_id=de.markusbordihn.dailyrewards
+mod_description=Daily rewards is a very lightweight and simple Forge mod that rewards players daily.
 
-mc_version=1.19.4
+## Environment Properties
+minecraft_version=1.20
+minecraft_version_range=[1.20,1.21)
+forge_version=46.0.14
+forge_version_range=[46,)
+loader_version_range=[46,)
+mapping_channel=official
+mapping_version=1.20
 
+## Version Properties
 version_major=4
 version_minor=5
 version_patch=0
 
+## Misc
+vendor_name=markusbordihn
+
+## CurseForge Properties
+curseforge_release_type=beta
 curseforge_project_id=628798
 curseforge_api_token=Never put your token here!
