Refactored code to remove custom network protocol. Added possibility to use lock, unlock, skip and skipped days. Added alternative menu for additional rewards. (wip).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,8 @@
     "eventbus",
     "firstperson",
     "Framebuffer",
+    "GAMEMASTERS",
+    "gameplay",
     "glowstone",
     "gradlew",
     "grandle",
@@ -46,6 +48,7 @@
     "NETHERIRE",
     "nonnulllist",
     "overworld",
+    "playstyle",
     "Reposts",
     "righthand",
     "Serializers",
