--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ minecraft {
   mappings channel: 'official', version: '1.18.2'
   // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
-  // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+  accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
   // Default run configurations.
   // These can be tweaked, removed, or duplicated as needed.
@@ -130,10 +130,17 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft 'net.minecraftforge:forge:1.18.2-40.2.1'
+  minecraft 'net.minecraftforge:forge:1.18.2-40.2.10'
+
+  // Jade: Integration
+  compileOnly fg.deobf("curse.maven:jade-324717:3761542")
+  runtimeOnly fg.deobf("curse.maven:jade-324717:3761542")
 
   // Compability Tests
   runtimeOnly fg.deobf("curse.maven:loot-bag-mod-356236:3699372")
+
+  // Additional helpful Mods for development (dev depenedency)
+  runtimeOnly fg.deobf("curse.maven:jei-238222:3773518")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
