Refactored code to remove custom network protocol. Added possibility to use hidden, lock, unlock, skip and skipped days. Added alternative menu for additional rewards. Added additional test commands. Fixed remaining issues with new slots.

--- a/build.gradle
+++ b/build.gradle
@@ -172,7 +172,7 @@ curseforge {
   project {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
-    releaseType = 'release'
+    releaseType = 'beta'
     addGameVersion("1.19")
     addGameVersion("Forge")
   }
