--- a/gradle.properties
+++ b/gradle.properties
@@ -1,28 +1,20 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 ## Mod Properties
 mod_id=daily_rewards
 mod_name=Daily Rewards
 mod_authors=Markus Bordihn
-mod_license=MIT
-mod_group_id=de.markusbordihn.dailyrewards
-mod_description=Daily rewards is a very lightweight and simple Forge mod that rewards players daily.
 
 ## Environment Properties
-minecraft_version=1.20
-minecraft_version_range=[1.20,1.21)
 forge_version=46.0.14
-forge_version_range=[46,)
-loader_version_range=[46,)
-mapping_channel=official
-mapping_version=1.20
+mc_version=1.20
 
 ## Version Properties
-version_major=4
-version_minor=5
+version_major=5
+version_minor=0
 version_patch=0
 
 ## Misc
