--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,11 +7,11 @@
 modLoader="javafml" #mandatory
 
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="${loader_version_range}"  #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="[46,)"  #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
-license="${mod_license}"
+license="MIT"
 
 # A URL to refer people to when problems occur with this mod
 #issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #optional
@@ -19,26 +19,26 @@ license="${mod_license}"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
   modId="daily_rewards"
-  version="${mod_version}"
-  displayName="${mod_name}"
+  version="${file.jarVersion}"
+  displayName="Daily Rewards"
   # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
   #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
   displayURL="https://www.curseforge.com/minecraft/mc-mods/daily-rewards"
   logoFile="logo.png"
   credits=""
-  authors="${mod_authors}"
-  description='''${mod_description}'''
+  authors="Markus Bordihn"
+  description='''Daily rewards is a very lightweight and simple Forge mod that rewards players daily.'''
 
 [[dependencies.daily_rewards]]
   modId="forge"
   mandatory=true
-  versionRange="${forge_version_range}"
+  versionRange="[46,)"
   ordering="NONE"
   side="BOTH"
 
 [[dependencies.daily_rewards]]
   modId="minecraft"
   mandatory=true
-  versionRange="${minecraft_version_range}"
+  versionRange="[1.20,1.21)"
   ordering="NONE"
   side="BOTH"
