Refactored code to remove custom network protocol. Added possibility to use hidden, lock, unlock, skip and skipped days. Added alternative menu for additional rewards. Added additional test commands. Fixed remaining issues with new slots.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,28 +7,20 @@ org.gradle.daemon=false
 mod_id=daily_rewards
 mod_name=Daily Rewards
 mod_authors=Markus Bordihn
-mod_license=MIT
-mod_group_id=de.markusbordihn.dailyrewards
-mod_description=Daily rewards is a very lightweight and simple Forge mod that rewards players daily.
 
 ## Environment Properties
-minecraft_version=1.20.1
-minecraft_version_range=[1.20.1,1.21)
-forge_version=47.1.42
-forge_version_range=[47,)
-loader_version_range=[47,)
-mapping_channel=official
-mapping_version=1.20.1
+forge_version=47.1.46
+mc_version=1.20.1
 
 ## Version Properties
-version_major=4
-version_minor=5
-version_patch=1
+version_major=5
+version_minor=0
+version_patch=0
 
 ## Misc
 vendor_name=markusbordihn
 
 ## CurseForge Properties
-curseforge_release_type=release
+curseforge_release_type=beta
 curseforge_project_id=628798
 curseforge_api_token=Never put your token here!
