--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,13 @@
 plugins {
   id 'com.matthewprenger.cursegradle' version '1.4.0'
   id 'eclipse'
-  id 'idea'
   id 'maven-publish'
   id 'net.minecraftforge.gradle' version '[6.0,6.2)'
   id 'nu.studer.credentials' version '1.0.7'
 }
 
 version = "${version_major}.${version_minor}.${version_patch}"
-archivesBaseName = "${mod_id}_${minecraft_version}"
-
-base {
-    archivesName = archivesBaseName
-}
+archivesBaseName = "${mod_id}_${mc_version}"
 
 // Mojang ships Java 17 to end users in 1.18+.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -24,7 +19,7 @@ minecraft {
   // stable_#            Stables are built at the discretion of the MCP team.
   // Use non-default mappings at your own risk. they may not always work.
   // Simply re-run your setup task after changing the mappings to update your workspace.
-  mappings channel: mapping_channel, version: mapping_version
+  mappings channel: 'official', version: "${mc_version}"
 
   // This property allows configuring Gradle's ProcessResources task(s) to run on IDE output locations before launching the game.
   // It is REQUIRED to be set to true for this template to function.
@@ -160,7 +155,7 @@ dependencies {
   // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
   // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-  minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+  minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 
   // Additional helpful Mods for development (dev depenedency)
   // runtimeOnly fg.deobf("curse.maven:jei-238222:3835406")
@@ -168,27 +163,9 @@ dependencies {
 
   // Compability Tests
   // runtimeOnly fg.deobf("curse.maven:loot-bag-mod-356236:3699372")
-}
 
-// This block of code expands all declared replace properties in the specified resource targets.
-// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
-// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
-// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
-def resourceTargets = ['META-INF/mods.toml', 'pack.mcmeta']
-def replaceProperties = [
-    minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
-    forge_version: forge_version, forge_version_range: forge_version_range,
-    loader_version_range: loader_version_range,
-    mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: version,
-    mod_authors: mod_authors, mod_description: mod_description,
-]
-processResources {
-  inputs.properties replaceProperties
-  replaceProperties.put 'project', project
-
-  filesMatching(resourceTargets) {
-    expand replaceProperties
-  }
+  // Additional helpful Mods for development (dev depenedency)
+  runtimeOnly fg.deobf("curse.maven:jei-238222:4597711")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -231,7 +208,7 @@ curseforge {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
     releaseType = "${curseforge_release_type}"
-    addGameVersion("${minecraft_version}")
+    addGameVersion("${mc_version}")
     addGameVersion("Forge")
   }
 }
