--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ buildscript {
 
 plugins {
   id 'com.matthewprenger.cursegradle' version '1.4.0'
-  id 'nu.studer.credentials' version '1.0.7'
+  id 'nu.studer.credentials' version '3.0'
+  id "com.modrinth.minotaur" version "2.+"
 }
 
 apply plugin: 'net.minecraftforge.gradle'
@@ -179,12 +180,27 @@ publishing {
 }
 
 curseforge {
-  apiKey = "${credentials.curseforge_api_token}"
+  apiKey = "${credentials.forKey('curseforge_api_token')}"
   project {
     id = "${curseforge_project_id}"
     changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/main'
-    releaseType = 'beta'
-    addGameVersion("1.18.2")
+    changelogType = 'markdown'
+    releaseType = "${curseforge_release_type}"
+    addGameVersion("${mc_version}")
     addGameVersion("Forge")
   }
+  options {
+    forgeGradleIntegration = true
+  }
+}
+
+modrinth {
+  token = "${credentials.forKey('modrinth_api_token')}"
+  projectId = "${modrinth_project_id}"
+  versionNumber = "${version}"
+  versionType = "${modrinth_release_type}"
+  versionName = "${mod_name} ${version}"
+  uploadFile = jar
+  gameVersions = ["${mc_version}"]
+  loaders = ["forge"]
 }
