Fixed spelling issue. Thanks to `@benjaminiserma` Added `showUnclaimedRewardsOnPlayerJoin` config to disable claim reward message on join. Added `showUnclaimedRewardsSpecialOnPlayerJoin` config to disable claim reward special message on join. Added `showReceivedRewardMessage` config to disable reviewed reward message. Added `showReceivedRewardSpecialMessage` config to disable reviewed reward special message. Added `showRewardClaimCommandMessage` config to disable showing the reward claim command. Added workaround to apply styling like `§0` to the reward time string.

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,13 @@ mod_author=Markus Bordihn
 vendor_name=markusbordihn
 mc_version=1.19.1
 version_major=5
-version_minor=2
+version_minor=3
 version_patch=0
+# CurseForge
+curseforge_release_type=release
 curseforge_project_id=628798
 curseforge_api_token=Never put your token here!
+# Modrinth
+modrinth_release_type=release
+modrinth_project_id=IsAmLg1d
+modrinth_api_token=Never put your token here!
