--- a/build.gradle
+++ b/build.gradle
@@ -166,7 +166,7 @@ dependencies {
   // runtimeOnly fg.deobf("curse.maven:loot-bag-mod-356236:3699372")
 
   // Additional helpful Mods for development (dev depenedency)
-  runtimeOnly fg.deobf("curse.maven:jei-238222:5101374")
+  runtimeOnly fg.deobf("curse.maven:jei-238222:5101380")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -207,11 +207,21 @@ tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
 
+// Merge the resources and classes into the same directory.
+// This is done because java expects modules to be in a single directory.
+// And if we have it in multiple we have to do performance intensive hacks like having the UnionFileSystem
+// This will eventually be migrated to ForgeGradle so modders don't need to manually do it. But that is later.
+sourceSets.each {
+  def dir = layout.buildDirectory.dir("sourcesSets/$it.name")
+  it.output.resourcesDir = dir
+  it.java.destinationDirectory = dir
+}
+
 curseforge {
   apiKey = "${credentials.forKey('curseforge_api_token')}"
   project {
     id = "${curseforge_project_id}"
-    changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/1.20.2'
+    changelog = 'See https://github.com/MarkusBordihn/BOs-Daily-Rewards/commits/1.20.4'
     changelogType = 'markdown'
     releaseType = "${curseforge_release_type}"
     addGameVersion("${mc_version}")
